kubernetes/apps/home-automation/zigbee2mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-automation
  name: zigbee2mqtt
  labels:
    app: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
      - name: zigbee2mqtt
        image: koenkk/zigbee2mqtt:1.30.0
        securityContext:
          privileged: true
        ports:
          - containerPort: 9442
        volumeMounts:
        - mountPath: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
          name: zigbee-device
        - mountPath: "/app/data"
          subPath: zigbee2mqtt
          name: unraid-storage
      volumes: 
      - name: unraid-storage
        persistentVolumeClaim: 
          claimName: unraid-pvc
      - name: zigbee-device
        hostPath:
          path: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
