kubernetes/apps/home-automation/zigbee2mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: zigbee2mqtt
spec:
  ingressClassName: nginx
  rules:
  - host: z2m.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zigbee2mqtt
            port: 
              number: 9442
